   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2012-12-04 09:39 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/tests/validator.prg
    ! More complete picture clause in numeric GETs.
    % Rearrangement of code for better usage.

2012-12-04 01:57 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/tests/validator.prg
    + Implemented: Templates for Numeric GETs, please test.
       VALID is broken if value of a numeric GET is invalid and focus 
       is placed on another object with mouse-click and then returned 
       to numeric GET. I am at a loss to understand the behavior of 
       QValidator in this respect as why it receives :Intermediate
       return and then never set it back.

2012-12-03 19:02 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/tests/validator.prg
    + Implemented: GET Picture Templates in addition to Picture Functions.
    + Implemented: Numeric GET "+-." positioning, confirmation to pre
       and post decimal width. Currently based on variables original value.
       ;
       TODO: implementation of Picture Teplates.
    + Completed: Date GET implementation. Now it supports Set( _SET_DATEFORMAT ).
    + Implemented: mouse support as default. To switch off the mouse interaction
       call oEdit:mousable := .F. .
    + Implemented: changed background color to somewhat red of any GET if 
       if focus is taken away from it by mouse action and the value 
       contained in the edit buffer could not been validated with VALID 
       clause. This is a visual only part and actual VALID is performed
       only by keyboard navigation.
    + Added one more field "Telephone Number:" which facilitates the 