@@ -16,6 +16,18 @@
    The license applies to all entries newer than 2009-04-28.
 */
 
+2012-12-05 08:49 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
+  * hbqt/qtgui/hbqt_hbqvalidator.cpp
+  * hbqt/qtgui/hbqt_hbqvalidator.h
+  * hbqt/qtgui/qth/HBQValidator.qth
+  * hbqt/tests/validator.prg
+    + Changed: HBQValidator( <bValidate> [, <bFixup>] ).
+       the class now accepts two blocks instead of one. Second block is to 
+       enforce QValidator:fixup() method. The block receives the 
+       text of editing buffer and can be changed in the the PRG source.
+    + Implemented the use of :fixup() method.
+    + many enhancements in GET system overall, please test.
+
 2012-12-04 09:39 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
   * hbqt/tests/validator.prg
     ! More complete picture clause in numeric GETs.
